--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,16 +1,388 @@
+/* -----FONTs ---------------------------------------------------------- */
+@font-face {font-family: "Roboto" ; src: url("/font/Roboto/Roboto-Medium.ttf");}
+@font-face {font-family: "Roboto-bold" ; src: url("/font/Roboto/Roboto-Bold.ttf");}
+@font-face {font-family: "Roboto-light" ; src: url("/font/Roboto/Roboto-Light.ttf");}
+@font-face {font-family: "Shrikhand" ; src: url("/font/Shrikhand/Shrikhand-Regular.ttf");}
+/* --------------------------------------------------------------------------- */
+
+
+/* -------- Format mobile ----------------------------------------------------- */
+@media screen and (max-width: 900px) {
+    #fonctionnement{
+        padding:6em 2.5em ;
+    }
+    .EPD{
+        padding: 1rem;
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
+    }
+    .EPD h3{
+        padding-top: 3rem;
+        padding-left: 2.5rem;
+        font-size: 2rem;
+        font-family: "roboto-light";
+        font-weight: normal;
+    }
+    #restaurants{
+        padding:6em 2.5em ;
+        background-color: #f3f3f3;
+    }
+}
+/* ------------------------------------------------------------------------------ */
+
+
+/* ------- FORMAT TABLETTE ----------------------------------------------------------------------------- */
+@media screen and (min-width: 901px) and (max-width:1200px) {
+    #fonctionnement{
+        padding:6em 2.5em ;
+    }
+    #restaurants{
+        display: grid;
+        grid-template-columns: auto auto;
+        gap: 2rem;
+        padding:6em 2.5em ;
+        background-color: #f3f3f3;
+    }
+    #restaurants h4{
+        grid-column-start: 1;
+        grid-column-end: 3;
+    }
+    .EPD{
+        padding: 1rem;
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
+    }
+    .EPD h3{
+        padding-top: 3rem;
+        padding-left: 2.5rem;
+        font-size: 2rem;
+        font-family: "roboto-light";
+        font-weight: normal;
+    }
+}
+/* ------------------------------------------------------------------------------------ */
+
+
+/* ------- FORMAT DESKTOP ----------------------------------------------------------------------------- */
+@media screen and (min-width: 1201px) {
+    #fonctionnement{
+        padding:6em 2.5em ;
+        display: grid;
+        justify-content: center;
+        grid-template-columns: 30% 30% 30%;
+        gap: 4rem;
+    }
+    #fonctionnement h3{
+        grid-column-start: 1;
+        grid-column-end: 4;
+    }
+    #restaurants{
+        display: grid;
+        justify-content: center;
+        grid-template-columns: 48% 48%;
+        gap: 2rem;
+        padding:6em 2.5em ;
+        background-color: #f3f3f3;
+    }
+    #restaurants h4{
+        grid-column-start: 1;
+        grid-column-end: 3;
+    }
+    .EPD{
+        padding: 1rem;
+        display: grid;
+        justify-content: center;
+        grid-template-columns: 32% 32% 32%;
+        gap: 2rem;
+    }
+    .EPD h3{
+        padding-top: 3rem;
+        padding-left: 2.5rem;
+        font-size: 2rem;
+        font-family: "roboto-light";
+        font-weight: normal;
+        grid-column-start: 1;
+        grid-column-end: 4;
+    }
+    .item-card{
+        width: 100%;
+    }
+}
+/* ------------------------------------------------------------------------------------ */
+
+
+/* ----ALL DEVICE ------------------------------------------------------------------- */
+#resMenu{
+    font-size:3em;
+    padding: 0.5em 2em;
+}
+.txt{
+    font-size: 2em;
+    padding: 0.25em 1em;
+    font-family: "Roboto-light";
+}
+.logo{
+    background-color: #f3f3f380;
+    font-family: "Shrikhand";
+    padding: 0.5em 0 0.2em 0;
+    font-size: 3.5em;
+}
+#localisation{
+    box-shadow: inset 0px 2px 10px rgba(0, 0, 0, 0.178);
+    background-color: #f3f3f3;
+    padding: 1em;
+    font-size: 2em;
+    font-weight: bold;
+}
+.local{
+    padding-left:1em;
+}
+.explorer{
+    padding: 2em 0;
+}
+button{
+    cursor: pointer;
+    margin: 1.5em 0;
+    font-size: 2em;
+    padding: 1em 1.5em;
+    color: white;
+    background: rgb(147,86,220);
+    background: linear-gradient(352deg, #9356dc 20%, #ff79da 100%);
+}
+.font3{
+    font-size:3em;
+}
+.btn{
+    font-size:1.7em;
+    padding:1.5em 0;
+    border-radius:1em;
+    margin: 1.5em 0;
+    background-color: #f6f6f6;
+    cursor: pointer;
+}
+.btn:hover{
+    background-color: #f5edff;
+}
+.btn:hover i {
+    color:#9356dc
+}
+.ico{
+    margin:0 1em;
+    font-size:1.25em;
+}
+.nbr{
+    min-width: 36px;
+    min-height: 36px;
+    color:white;
+}
+.left-decal{
+    position: relative;
+    right:0.75em;
+}
+.card-container{
+    position: relative;
+    margin-bottom:5em;
+}
+.card{
+    width:100%;
+    border-radius: 1.5em;
+    position:relative;
+    transition: 0.5s;
+    display: flex;
+    flex-direction: column;
+}
+.card:active{
+    transform: scale(1.01);
+}
+.card img{
+    border-radius: 1.5em 1.5em 0 0;
+}
+.new{
+    font-size:1.75em;
+    color:green;
+    background-color: aquamarine;
+    width: 20%;
+    padding:0.5em;
+    border-radius: 0.2em;
+    position: absolute;
+    right: 1.5rem;
+    top:1.5rem;
+
+}
+.label{
+    padding: 2em;
+    background-color:white;
+    border-radius: 0 0 1.5em 1.5em;
+}
+.label-title{
+    font-size:2.75em;
+    margin-bottom: 0.25em;
+}
+.label-txt{
+    font-size: 2.5em;
+    font-family: "Roboto-light";
+}
+img{
+    object-fit:cover;
+    width:100%;
+    height: 300px;
+}
+.like{
+    font-size:4em;
+}
+.color-heart{
+    opacity: 0;
+    position: absolute;
+    background: linear-gradient(352deg, rgba(147,86,220,1) 20%, rgba(255,121,218,1) 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+.like:hover .heart{
+    display: none;
+}
+.like:hover .color-heart{
+    transition: opacity 0.5s;
+    opacity: 1;
+    position: initial;
+}
+footer{
+    background-color:#353535;
+    padding:2em;
+}
+.logo2{
+    font-family: "Shrikhand";
+    font-weight: lighter;
+    font-size:2em;
+}
+.foot{
+    padding-top:1em;
+    font-size:1.75em;
+    line-height: 1.5em;
+}
+.item h4{
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.details{
+    font-family: "roboto-light";
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.item{
+    text-align: start;
+    width: 100%;
+    overflow: hidden;
+    white-space: nowrap;
+}
+.item-card{
+    background: white;
+    height: 7rem;
+    border-radius: 15px;
+    box-shadow: #959da533 0px 8px 24px;
+    display: flex;
+    cursor: pointer;
+    opacity: 0;
+}
+.item-menu{
+    padding: 1.5rem;
+    max-width: 100%;
+    overflow: hidden;
+    flex: 1;
+    display: flex;
+    justify-content: space-between;
+    gap: 1rem;
+    font-size: 1.6rem;
+    font-weight: 400;
+}
+.item-selection{
+    background: #99e2d0;
+    cursor: pointer;
+    height: auto;
+    width: 0px;
+    opacity: 0;
+    border-radius: 0 15px 15px 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: transform 0.5s ease-in-out, width 0.3s ease-in-out, opacity 0.4s ease-in-out;
+}
+.check{
+    font-size: 3rem;
+    color: white;
+    transform: rotate(180deg);
+    transition: 0.3s ease-in-out;
+}
+.item-card:hover .item-selection{
+    opacity: 100%;
+    width: 7rem;
+}
+.item-card:hover .check{
+    transform: rotate(0deg);
+}
+.slide{
+    animation: slide 1s forwards;
+}
+.delay1{
+    animation-delay: 0.2s;
+}
+.delay2{
+    animation-delay: 0.4s;
+}
+.delay3{
+    animation-delay: 0.6s;
+}
+.delay4{
+    animation-delay: 0.8s;
+}
+.delay5{
+    animation-delay: 1s;
+}
+.delay6{
+    animation-delay: 1.2s;
+}
+.delay7{
+    animation-delay: 1.4s;
+}
+.delay8{
+    animation-delay: 1.6s;
+}
+.delay9{
+    animation-delay: 1.8s;
+}
+.delay10{
+    animation-delay: 2s;
+}
+@keyframes slide{
+    0% {
+        transform: translatey(20px);
+        opacity: 0%;
+    }
+    100% {
+        transform: translatey(0px);
+        opacity: 100%;
+    }
+}
+/* ------------------------------------------------------------------------------ */
+
+/* ---- GENERAL ----------------------------------------------------------------- */
 *{
     margin: 0;
     font-family: "Roboto";
     scroll-behavior: smooth;
     border-collapse:collapse;
 }
-@font-face {font-family: "Roboto" ; src: url("/font/Roboto/Roboto-Medium.ttf");}
-@font-face {font-family: "Roboto-bold" ; src: url("/font/Roboto/Roboto-Bold.ttf");}
-@font-face {font-family: "Roboto-light" ; src: url("/font/Roboto/Roboto-Light.ttf");}
-@font-face {font-family: "Shrikhand" ; src: url("/font/Shrikhand/Shrikhand-Regular.ttf");}
+body{
+    width: 100%;
+    min-height: 100vh;
+}
 header, main{
-    max-width: 1600px;
     margin: auto;
+}
+a{
+    text-decoration: none;
+    color: black;
 }
 .flex-center{
     display:flex;
@@ -20,6 +392,11 @@ header, main{
 .flex-start{
     display:flex;
     justify-content: start;
+    align-items: center;
+}
+.flex-end{
+    display:flex;
+    justify-content: end;
     align-items: center;
 }
 .flex-between{
@@ -41,7 +418,7 @@ header, main{
     background-color: #f5edff;
 }
 .purple{
-    background-color: rgb(147,86,220);
+    background-color: #9356dc;
 }
 .purple2{
     color: rgb(147,86,220);
@@ -67,150 +444,120 @@ header, main{
 .pad-bot{
     padding-bottom: 1em;
 }
-@media screen and (max-width: 700px) {
-    #resMenu{
-        font-size:3em;
-        padding: 0.5em 2em;
-    }
-    .txt{
-        font-size: 2em;
-        padding: 0.25em 1em;
-        font-family: "Roboto-light";
-    }
-    .left{
-        text-align: start;
-    }
-    .center{
-        text-align: center;
-    }
-    .logo{
-        background-color: #f3f3f380;
-        font-family: "Shrikhand";
-        padding: 0.5em 0 0.2em 0;
-        font-size: 3.5em;
-    }
-    #localisation{
-        box-shadow: inset 0px 2px 10px rgba(0, 0, 0, 0.178);
-        background-color: #f3f3f3;
-        padding: 1em;
-        font-size: 2em;
-        font-weight: bold;
-    }
-    .local{
-        padding-left:1em;
-    }
-    .explorer{
-        padding: 2em 0;
-    }
-    button{
-        cursor: pointer;
-        margin: 1.5em 0;
-        font-size: 2em;
-        padding: 1em 1.5em;
-        color: white;
-        background: rgb(147,86,220);
-        background: linear-gradient(352deg, rgba(147,86,220,1) 20%, rgba(255,121,218,1) 100%);
-    }
-    #fonctionnement{
-        padding:6em 2.5em ;
-    }
-    .font3{
-        font-size:3em;
-    }
-    .btn{
-        font-size:2em;
-        padding:1.5em 0;
-        border-radius:1em;
-        margin: 1.5em 0;
-    }
-    .ico{
-        margin:0 1em;
-        font-size:1.25em;
-    }
-    .nbr{
-        width: 1.5em;
-        height: 1.5em;
-        color:white;
-    }
-    .left-decal{
-        position: relative;
-        right:0.75em;
-    }
-    #restaurants{
-        padding:6em 2.5em ;
-        background-color: #f3f3f3;
-    }
-    .card-container{
-        position: relative;
-        margin-bottom:5em;
-    }
-    .card{
-        width:100%;
-        border-radius: 1.5em;
-        position:relative;
-        transition: 0.5s;
-    }
-    .card:active{
-        transform: scale(1.01);
-    }
-    .new{
-        font-size:1.75em;
-        color:green;
-        background-color: aquamarine;
-        width: 20%;
-        padding:0.5em;
-        border-radius: 0.2em;
-        position: absolute;
-        right: 1.5rem;
-        top:1.5rem;
-
-    }
-    .label{
-        padding: 2em;
-        background-color:white;
-        border-radius: 0 0 1.5em 1.5em;
-    }
-    .label-title{
-        font-size:2.75em;
-        margin-bottom: 0.25em;
-    }
-    .label-txt{
-        font-size: 2.5em;
-        font-family: "Roboto-light";
-    }
-    img{
-        border-radius: 1.5em 1.5em 0 0;
-        object-fit:cover;
-        width:100%;
-        height: 300px;
-    }
-    .like{
-        font-size:4em;
-        z-index: 1;
-        position: absolute;
-        right: 2.5rem;
-        bottom:3rem;
-    }
-    #like-on-off{
-        display:none;
-    }
-    #like-on-off:checked + label{
-        color:blue;
-    }
+.left{
+    text-align: start;
+}
+.center{
+    text-align: center;
+}
+.title{
+    font-family: "Shrikhand";
+    font-size: 3.5em;
+}
+.fleche{
+    position: absolute;
+    font-size: 2.5rem;
+    padding: 2.5rem;
+    cursor: pointer;
+}
+.menu{
+    position: relative;
+    top: -5rem;
+    background-color: #f3f3f3;
+    border-radius: 5rem 5rem 0 0;
+    padding-top: 3rem;
+    margin-bottom: -5rem;
+}
+.title{
+    justify-content: space-around;
+}
+.title h2{
+    font-size: 3rem;
+    font-family: "Shrikhand";
+}
+.price{
+    font-weight: bold;
+    margin-top:auto;
+    color:#353535;
+}
+/* ------------------------------------------------------------------------------- */
 
 
-    footer{
-        background-color:#353535;
-        padding:2em;
+/* ------ LOADER ------------------------------------------------------------------ */
+.loader-container{
+    z-index: 1000;
+    position: fixed;
+    animation: loader 1s 3s forwards;
+    opacity: 1;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 100vh;
+    width: 100%;
+    background: linear-gradient(352deg, #9356dc 20%, rgba(255,121,218,1) 100%);
+}
+.loader {
+    width: 5vh;
+    height: 5vh;
+    position: relative;
+}
+.loader:before {
+    content: '';
+    width: 5vh;
+    height: 1vh;
+    background: #000;
+    opacity: 0.25;
+    position: absolute;
+    top: 75px;
+    left: 0;
+    border-radius: 50%;
+    animation: shadow 0.5s 0.2s 20;
+}
+.loader:after {
+    content: '';
+    width: 100%;
+    height: 100%;
+    background: #9356dc;
+    animation: Spin 0.5s 0.2s 20;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-radius: 4px;
+}
+@keyframes Spin {
+17% {
+    border-bottom-right-radius: 3px;
+}
+25% {
+    transform: translateY(9px) rotate(22.5deg);
+}
+50% {
+    transform: translateY(18px) scale(1, .9) rotate(45deg);
+    border-bottom-right-radius: 20px;
+}
+75% {
+    transform: translateY(9px) rotate(67.5deg);
+}
+100% {
+    transform: translateY(0) rotate(90deg);
+}
+}
+@keyframes shadow {
+0%, 100% {
+    transform: scale(1);
+}
+50% {
+    transform: scale(1.2);
+}
+}
+@keyframes loader{
+    0%{
+        opacity: 1;
     }
-    .logo2{
-        font-family: "Shrikhand";
-        font-weight: lighter;
-        font-size:2em;
-    }
-    .foot{
-        padding-top:1em;
-        font-size:1.75em;
-        line-height: 1.5em;
+    100% {
+        opacity: 0;
+        visibility: hidden;
     }
 }
+/* ------------------------------------------------------------------------------- */
