--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,13 +1,34 @@
 /* -----FONTs ---------------------------------------------------------- */
-@font-face {font-family: "Roboto" ; src: url("font/Roboto/Roboto-Medium.ttf");}
-@font-face {font-family: "Roboto-bold" ; src: url("font/Roboto/Roboto-Bold.ttf");}
-@font-face {font-family: "Roboto-light" ; src: url("font/Roboto/Roboto-Light.ttf");}
-@font-face {font-family: "Shrikhand" ; src: url("font/Shrikhand/Shrikhand-Regular.ttf");}
+@font-face {font-family: "Roboto" ; src: url("../font/Roboto/Roboto-Medium.ttf");}
+@font-face {font-family: "Roboto-bold" ; src: url("../font/Roboto/Roboto-Bold.ttf");}
+@font-face {font-family: "Roboto-light" ; src: url("../font/Roboto/Roboto-Light.ttf");}
+@font-face {font-family: "Shrikhand" ; src: url("../font/Shrikhand/Shrikhand-Regular.ttf");}
 /* --------------------------------------------------------------------------- */
 
 
 /* -------- Format mobile ----------------------------------------------------- */
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 500px) {
+    .card img{
+        height: 150px;
+    }
+    .left h5, .left p{
+        font-size: 1.75em;
+    }
+    .like i{
+        font-size: 0.75em;
+    }
+    #resMenu{
+        padding: 0.5em 0;
+    }
+    .explorer button{
+        font-size: 1.5em;
+    }
+    .center button{
+        font-size: 1.5em;
+    }
+    #fonctionnement h3{
+        font-size: 2em;
+    }
     #fonctionnement{
         padding:6em 2.5em ;
     }
@@ -17,16 +38,87 @@
         flex-direction: column;
         gap: 2rem;
     }
-    .EPD h3{
-        padding-top: 3rem;
-        padding-left: 2.5rem;
+    .line-after{
+        position: relative;
         font-size: 2rem;
         font-family: "roboto-light";
         font-weight: normal;
+        grid-column-start: 1;
+        grid-column-end: 4;
+    }
+    .line-after::after{
+        content : "";
+        position: absolute;
+        left:0;
+        bottom  : -0.75rem;
+        height  : 1px;
+        width   : 5rem;
+        border-bottom:4px solid #99e2d0;
     }
     #restaurants{
         padding:6em 2.5em ;
         background-color: #f3f3f3;
+    }
+    header h1{
+        font-size: 1em;
+        margin-left: 3rem;
+    }
+    .title h2{
+        font-size: 1.9em;
+    }
+    .title .like{
+        font-size: 3em;
+    }
+    .fleche{
+        position: absolute;
+        padding: 2.5rem 1rem;
+    }
+
+}
+@media screen and (min-width: 501px) and (max-width: 900px) {
+    #fonctionnement{
+        padding:6em 2.5em ;
+    }
+    #resMenu{
+        padding: 0.5em 2em;
+    }
+    .EPD{
+        padding: 1rem;
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
+    }
+    .line-after{
+        position: relative;
+        padding-top: 3rem;
+        padding-left: 1.5rem;
+        font-size: 2rem;
+        font-family: "roboto-light";
+        font-weight: normal;
+        grid-column-start: 1;
+        grid-column-end: 4;
+    }
+    .line-after::after{
+        content : "";
+    position: absolute;
+    left    : 1.5rem;
+    bottom  : -0.75rem;
+    height  : 1px;
+    width   : 5rem;
+    border-bottom:4px solid #99e2d0;
+    }
+    #restaurants{
+        padding:6em 2.5em ;
+        background-color: #f3f3f3;
+    }
+    .title h2{
+        font-size: 3em;
+    }
+    .title .like{
+        font-size: 3.5em;
+    }
+    .fleche{
+        padding: 2.5rem;
     }
 }
 /* ------------------------------------------------------------------------------ */
@@ -36,6 +128,9 @@
 @media screen and (min-width: 901px) and (max-width:1200px) {
     #fonctionnement{
         padding:6em 2.5em ;
+    }
+    #resMenu{
+        padding: 0.5em 2em;
     }
     #restaurants{
         display: grid;
@@ -54,12 +149,33 @@
         flex-direction: column;
         gap: 2rem;
     }
-    .EPD h3{
+    .line-after{
+        position: relative;
         padding-top: 3rem;
-        padding-left: 2.5rem;
+        padding-left: 1.5rem;
         font-size: 2rem;
         font-family: "roboto-light";
         font-weight: normal;
+        grid-column-start: 1;
+        grid-column-end: 4;
+    }
+    .line-after::after{
+        content : "";
+    position: absolute;
+    left    : 1.5rem;
+    bottom  : -0.75rem;
+    height  : 1px;
+    width   : 5rem;
+    border-bottom:4px solid #99e2d0;
+    }
+    .title h2{
+        font-size: 3.5em;
+    }
+    .title .like{
+        font-size: 4em;
+    }
+    .fleche{
+        padding: 2.5rem;
     }
 }
 /* ------------------------------------------------------------------------------------ */
@@ -77,6 +193,9 @@
     #fonctionnement h3{
         grid-column-start: 1;
         grid-column-end: 4;
+    }
+    #resMenu{
+        padding: 0.5em 2em;
     }
     #restaurants{
         display: grid;
@@ -97,17 +216,36 @@
         grid-template-columns: 32% 32% 32%;
         gap: 2rem;
     }
-    .EPD h3{
+    .line-after{
+        position: relative;
         padding-top: 3rem;
-        padding-left: 2.5rem;
+        padding-left: 1.5rem;
         font-size: 2rem;
         font-family: "roboto-light";
         font-weight: normal;
         grid-column-start: 1;
         grid-column-end: 4;
     }
+    .line-after::after{
+        content : "";
+    position: absolute;
+    left    : 1.5rem;
+    bottom  : -0.75rem;
+    height  : 1px;
+    width   : 5rem;
+    border-bottom:4px solid #99e2d0;
+    }
     .item-card{
         width: 100%;
+    }
+    .title h2{
+        font-size: 4em;
+    }
+    .title .like{
+        font-size: 4em;
+    }
+    .fleche{
+        padding: 2.5rem;
     }
 }
 /* ------------------------------------------------------------------------------------ */
@@ -116,7 +254,6 @@
 /* ----ALL DEVICE ------------------------------------------------------------------- */
 #resMenu{
     font-size:3em;
-    padding: 0.5em 2em;
 }
 .txt{
     font-size: 2em;
@@ -124,7 +261,6 @@
     font-family: "Roboto-light";
 }
 .logo{
-    background-color: #f3f3f380;
     font-family: "Shrikhand";
     padding: 0.5em 0 0.2em 0;
     font-size: 3.5em;
@@ -150,13 +286,18 @@ button{
     color: white;
     background: rgb(147,86,220);
     background: linear-gradient(352deg, #9356dc 20%, #ff79da 100%);
+    transition: 0.5s
+}
+button:hover{
+    transform: scale(1.05);
+    box-shadow: 0px 0px 20px #9256dcbd;
 }
 .font3{
     font-size:3em;
 }
 .btn{
     font-size:1.7em;
-    padding:1.5em 0;
+    padding:1em 0;
     border-radius:1em;
     margin: 1.5em 0;
     background-color: #f6f6f6;
@@ -176,6 +317,11 @@ button{
     min-width: 36px;
     min-height: 36px;
     color:white;
+}
+.nowrap{
+    overflow: hidden;
+    text-overflow:ellipsis;
+    white-space: nowrap;
 }
 .left-decal{
     position: relative;
@@ -204,6 +350,7 @@ button{
     color:green;
     background-color: aquamarine;
     width: 20%;
+    min-width: 100px;
     padding:0.5em;
     border-radius: 0.2em;
     position: absolute;
@@ -219,10 +366,16 @@ button{
 .label-title{
     font-size:2.75em;
     margin-bottom: 0.25em;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 .label-txt{
     font-size: 2.5em;
     font-family: "Roboto-light";
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 img{
     object-fit:cover;
@@ -231,6 +384,15 @@ img{
 }
 .like{
     font-size:4em;
+    position:relative;
+    width: 20%;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+.heart{
+    z-index:1;
 }
 .color-heart{
     opacity: 0;
@@ -238,14 +400,10 @@ img{
     background: linear-gradient(352deg, rgba(147,86,220,1) 20%, rgba(255,121,218,1) 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-}
-.like:hover .heart{
-    display: none;
+    transition: 0.5s;
 }
 .like:hover .color-heart{
-    transition: opacity 0.5s;
     opacity: 1;
-    position: initial;
 }
 footer{
     background-color:#353535;
@@ -374,8 +532,14 @@ footer{
     border-collapse:collapse;
 }
 body{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
     width: 100%;
     min-height: 100vh;
+}
+header{
+    background-color: #f3f3f380;
 }
 header, main{
     margin: auto;
@@ -446,18 +610,16 @@ a{
 }
 .left{
     text-align: start;
+    width: 80%;
 }
 .center{
     text-align: center;
 }
 .title{
-    font-family: "Shrikhand";
-    font-size: 3.5em;
+    padding: 1em;
 }
 .fleche{
-    position: absolute;
     font-size: 2.5rem;
-    padding: 2.5rem;
     cursor: pointer;
 }
 .menu{
@@ -472,7 +634,6 @@ a{
     justify-content: space-around;
 }
 .title h2{
-    font-size: 3rem;
     font-family: "Shrikhand";
 }
 .price{
@@ -509,7 +670,7 @@ a{
     background: #000;
     opacity: 0.25;
     position: absolute;
-    top: 75px;
+    top: 7vh;
     left: 0;
     border-radius: 50%;
     animation: shadow 0.5s 0.2s 20;
